# DNDS

./: .gitignore  .pdm.toml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  example.env  pyproject.toml  run.sh
.conf/nginx/: nginx-setup.conf
.conf/postgres/: postgresql.conf
dnd/: __main__.py  app.py  settings.py
dnd/database/: db.py
dnd/database/models/: __init__.py  base.py  gamesets.py  maps.py  pawns.py  users.py
dnd/database/schemas/: __init__.py  base.py  game_sets.py  maps.py  pawns.py  users.py
dnd/migrations/: env.py
dnd/migrations/versions/: 172d0d0efa2e_add_current_map_id_fk_to_gamesets_meta.py  2023_02_10_0540-b22b70a2244d_init.py  2023_02_10_0851-e92abfb4bbce_add_fields_to_pawns.py  2023_02_10_1037-a2d5db77c2c8_make_x_y_allow_null_in_pawnmeta.py  2484733f7822_init.py  7352c5d03b4c_init.py  90a24b8a86dc_add_relationships.py  e3808bcce6a3_add_pawns_and_pawns_meta_maps_and_maps_.py
dnd/models/: auth.py  game_set.py  gameset.py  map.py  pawn.py
dnd/procedures/: auth.py  game_set.py  gameset.py  maps.py
dnd/routes/: game_sets.py  gamesets.py  health.py  login.py  maps.py  pawns.py  register.py  users.py
dnd/storages/: game_sets.py  gamesets.py  glossary.py  images.py
dnd/utils/: crypto.py  types.py
glossary/pawns/: sizes.json
