[project]
name = "dnd"
version = "0.0.1"
description = "DND Viewer backend"
authors = [
    {name = "Чеботарёв Виктор", email = "powersemmi@gmail.com"},
]
dependencies = [
    "fastapi[all]==0.89.*",
    "pydantic==1.10.*",
    "hypercorn[h3]==0.14.*",
    "sqlalchemy[asyncio]==2.0.*",
    "alembic==1.9.*",
    "asyncpg==0.27.*",
    "passlib[bcrypt]==1.7.*",
    "python-jose[cryptography]==3.3.*",
    "SQLAlchemy-Utils==0.39.*",
    "colour==0.1.*",
    "hashids==1.3.*",
    "Pillow==9.4.*",
    "websockets==10.4.*",
    "python-multipart==0.0.*",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.12.*",
    "pytest>=7.2.*",
    "black>=23.1.*",
    "flake8>=6.0.*",
    "Flake8-pyproject>=1.2.2",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
_.env_file = ".env"
# lint
black = "black ."
flake = "flake ."
isort = "isort ."
# migrates
migrate = "alembic upgrade head"
downgrade = "alembic downgrade"
makemigration = "alembic revision --autogenerate -m"
# tests
pytest = "python -m alembic downgrade"
# run
main = "python -m dnd"
start-dev = "python -mWd dnd"


[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.flake8]
ignore = ["W291", "E203", "W503", "E731"]
exclude = [
    ".git",
    "__pycashe__",
    "docs",
    "build",
    "dist",
    ".venv",
    "__pypackeges__"
]
max-line-length = 79
count = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
